style: adjust principal statement layout to proportionally widen image and fit reference design text box

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
 
                     <div class="nav-item"><a href="interview.html"><button>卒業生の声</button></a></div>
                 </nav>
-                
+
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
@@ -157,15 +157,19 @@
             <h2 class="course-title" id="history">校長・沿革</h2>
 
             <div class="content-block">
-                <div class="two-column">
-                    <div class="column">
+                <div style="display: flex; gap: 30px; flex-wrap: wrap;">
+                    <div style="flex: 1.5; min-width: 300px;">
                         <div class="image-placeholder" style="height: 300px;">校長先生ポートレート</div>
                     </div>
-                    <div class="column">
+                    <div style="flex: 1; min-width: 300px;">
                         <h3>歴史ある学び舎で、未来を拓く</h3>
-                        <p>本校は、昭和21年に霞ヶ浦農科大学併設の中等学校（実業学校）である霞ヶ浦農業学校を前身とした、78年の歴史を持つ伝統ある私立高校です。2004年に男女共学となり、卒業生は27,000名を超え、多くの著名人を輩出してきました。
+                        <hr style="margin: 15px 0; border: 0; border-top: 1px solid #ddd;">
+                        <p style="font-size: 0.95em; line-height: 1.7; color: #444; margin-bottom: 20px;">
+                            本校は、昭和21年に霞ヶ浦農科大学併設の中等学校（実業学校）である霞ヶ浦農業学校を前身とした、78年の歴史を持つ伝統ある私立高校です。2004年に男女共学となり、卒業生は27,000名を超え、多くの著名人を輩出してきました。
                         </p>
-                        <p>歴史ある学び舎で、生徒たちは明るく元気に過ごし、日々成長しています。その成長を支えるべく、教師たちは「何事にも誠実に」「熱意ある指導」を心掛け、教育活動に励んでいます。</p>
+                        <p style="font-size: 0.95em; line-height: 1.7; color: #444;">
+                            歴史ある学び舎で、生徒たちは明るく元気に過ごし、日々成長しています。その成長を支えるべく、教師たちは「何事にも誠実に」「熱意ある指導」を心掛け、教育活動に励んでいます。
+                        </p>
                     </div>
                 </div>
             </div>
