style: replace course goal sections with image placeholders to match reference design

--- a/course.html
+++ b/course.html
@@ -88,7 +88,7 @@
 
                     <div class="nav-item"><a href="interview.html"><button>卒業生の声</button></a></div>
                 </nav>
-                
+
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
@@ -104,25 +104,22 @@
             <h2 class="course-title" id="tokushin_senbatsu">特進選抜</h2>
 
             <div class="content-block">
-                <h3>目標・実績</h3>
-                <div class="two-column">
-                    <div class="column">
-                        <h4>目標</h4>
-                        <p class="goal-text">国公立大学・難関私立大学</p>
-                    </div>
-                    <div class="column">
-                        <div class="achievement-box">
-                            <h4>主な合格実績 (昨年度)</h4>
-                            <ul class="achievement-list">
-                                <li>〇〇大学: 1名</li>
-                                <li>〇〇大学: 2名</li>
-                                <li>〇〇大学: 5名</li>
-                                <li>〇〇大学: 10名</li>
-                                <li>〇〇大学: 8名</li>
-                                <li>(他 国公立・難関私大多数)</li>
-                            </ul>
-                        </div>
-                    </div>
+                <h3 style="text-align: center; margin-bottom: 20px;">目標</h3>
+                <div class="image-placeholder"
+                    style="height: 120px; display: flex; align-items: center; justify-content: center; font-size: 1.2em; font-weight: bold; margin-bottom: 40px; background-color: #f0f0f0; color: #333; border: 1px solid #ccc;">
+                    国公立大学・難関私立大学
+                </div>
+
+                <h3 style="text-align: center; margin-bottom: 20px;">主な合格実績 (昨年度)</h3>
+                <div class="achievement-box" style="margin: 0 auto; max-width: 600px;">
+                    <ul class="achievement-list" style="columns: 2; gap: 40px;">
+                        <li>〇〇大学: 1名</li>
+                        <li>〇〇大学: 2名</li>
+                        <li>〇〇大学: 5名</li>
+                        <li>〇〇大学: 10名</li>
+                        <li>〇〇大学: 8名</li>
+                        <li>(他 国公立・難関私大多数)</li>
+                    </ul>
                 </div>
             </div>
 
@@ -177,23 +174,20 @@
             <h2 class="course-title" id="tokushin">特進</h2>
 
             <div class="content-block">
-                <h3>目標・実績</h3>
-                <div class="two-column">
-                    <div class="column">
-                        <h4>目標</h4>
-                        <p class="goal-text">中堅私立大学</p>
-                    </div>
-                    <div class="column">
-                        <div class="achievement-box">
-                            <h4>主な合格実績 (昨年度)</h4>
-                            <ul class="achievement-list">
-                                <li>〇〇大学: 15名</li>
-                                <li>〇〇大学: 30名</li>
-                                <li>〇〇大学: 3名</li>
-                                <li>(他 有名私大多数)</li>
-                            </ul>
-                        </div>
-                    </div>
+                <h3 style="text-align: center; margin-bottom: 20px;">目標</h3>
+                <div class="image-placeholder"
+                    style="height: 120px; display: flex; align-items: center; justify-content: center; font-size: 1.2em; font-weight: bold; margin-bottom: 40px; background-color: #f0f0f0; color: #333; border: 1px solid #ccc;">
+                    中堅私立大学
+                </div>
+
+                <h3 style="text-align: center; margin-bottom: 20px;">主な合格実績 (昨年度)</h3>
+                <div class="achievement-box" style="margin: 0 auto; max-width: 600px;">
+                    <ul class="achievement-list" style="columns: 2; gap: 40px;">
+                        <li>〇〇大学: 15名</li>
+                        <li>〇〇大学: 30名</li>
+                        <li>〇〇大学: 3名</li>
+                        <li>(他 有名私大多数)</li>
+                    </ul>
                 </div>
             </div>
 
@@ -248,23 +242,20 @@
             <h2 class="course-title" id="sogo">総合進学</h2>
 
             <div class="content-block">
-                <h3>目標・実績</h3>
-                <div class="two-column">
-                    <div class="column">
-                        <h4>目標</h4>
-                        <p class="goal-text">私立文系大学・短大・専門職大学・専門学校・就職</p>
-                    </div>
-                    <div class="column">
-                        <div class="achievement-box">
-                            <h4>主な進路実績 (昨年度)</h4>
-                            <ul class="achievement-list">
-                                <li>〇〇大学: 3人</li>
-                                <li>〇〇大学: 1人</li>
-                                <li>〇〇専門学校: 10人</li>
-                                <li>就職・公務員: 5人</li>
-                            </ul>
-                        </div>
-                    </div>
+                <h3 style="text-align: center; margin-bottom: 20px;">目標</h3>
+                <div class="image-placeholder"
+                    style="height: 120px; display: flex; align-items: center; justify-content: center; font-size: 1.2em; font-weight: bold; margin-bottom: 40px; background-color: #f0f0f0; color: #333; border: 1px solid #ccc;">
+                    私立文系大学・短大・専門職大学・専門学校・就職
+                </div>
+
+                <h3 style="text-align: center; margin-bottom: 20px;">主な進路実績 (昨年度)</h3>
+                <div class="achievement-box" style="margin: 0 auto; max-width: 600px;">
+                    <ul class="achievement-list" style="columns: 2; gap: 40px;">
+                        <li>〇〇大学: 3人</li>
+                        <li>〇〇大学: 1人</li>
+                        <li>〇〇専門学校: 10人</li>
+                        <li>就職・公務員: 5人</li>
+                    </ul>
                 </div>
             </div>
 
