--- a/about.html
+++ b/about.html
@@ -162,13 +162,10 @@
                         <div class="image-placeholder" style="height: 300px;">校長先生ポートレート</div>
                     </div>
                     <div style="flex: 1; min-width: 300px;">
-                        <h3>歴史ある学び舎で、未来を拓く</h3>
+                        <h3>校長のプロフィールにするので、ここにプロフィールが入ります。</h3>
                         <hr style="margin: 15px 0; border: 0; border-top: 1px solid #ddd;">
                         <p style="font-size: 0.95em; line-height: 1.7; color: #444; margin-bottom: 20px;">
-                            本校は、昭和21年に霞ヶ浦農科大学併設の中等学校（実業学校）である霞ヶ浦農業学校を前身とした、78年の歴史を持つ伝統ある私立高校です。2004年に男女共学となり、卒業生は27,000名を超え、多くの著名人を輩出してきました。
-                        </p>
-                        <p style="font-size: 0.95em; line-height: 1.7; color: #444;">
-                            歴史ある学び舎で、生徒たちは明るく元気に過ごし、日々成長しています。その成長を支えるべく、教師たちは「何事にも誠実に」「熱意ある指導」を心掛け、教育活動に励んでいます。
+                            テキストテキストテキスト
                         </p>
                     </div>
                 </div>
