style: remove all box-shadows and change grey backgrounds to white for a flatter design

--- a/contact_admission.html
+++ b/contact_admission.html
@@ -101,7 +101,7 @@
         <section class="course-section">
             <h2 class="course-title">受験生・保護者のお問い合わせ</h2>
             <div class="content-block"
-                style="max-width: 800px; margin: 0 auto; background-color: #f9f9f9; padding: 40px; border-radius: 8px; border-top: 5px solid #333;">
+                style="max-width: 800px; margin: 0 auto; background-color: #fff; padding: 40px; border-radius: 8px; border-top: 5px solid #333;">
 
                 <form class="contact-form">
                     <div class="form-group">
