--- a/course.html
+++ b/course.html
@@ -106,7 +106,7 @@
             <div class="content-block">
                 <h3 style="text-align: center; margin-bottom: 20px;">目標</h3>
                 <div class="image-placeholder"
-                    style="height: 120px; display: flex; align-items: center; justify-content: center; font-size: 1.2em; font-weight: bold; margin-bottom: 40px; background-color: #f0f0f0; color: #333; border: 1px solid #ccc;">
+                    style="height: 120px; display: flex; align-items: center; justify-content: center; font-size: 1.2em; font-weight: bold; margin-bottom: 40px; background-color: #fff; color: #333; border: 1px solid #ccc;">
                     国公立大学・難関私立大学
                 </div>
 
@@ -176,7 +176,7 @@
             <div class="content-block">
                 <h3 style="text-align: center; margin-bottom: 20px;">目標</h3>
                 <div class="image-placeholder"
-                    style="height: 120px; display: flex; align-items: center; justify-content: center; font-size: 1.2em; font-weight: bold; margin-bottom: 40px; background-color: #f0f0f0; color: #333; border: 1px solid #ccc;">
+                    style="height: 120px; display: flex; align-items: center; justify-content: center; font-size: 1.2em; font-weight: bold; margin-bottom: 40px; background-color: #fff; color: #333; border: 1px solid #ccc;">
                     中堅私立大学
                 </div>
 
@@ -244,7 +244,7 @@
             <div class="content-block">
                 <h3 style="text-align: center; margin-bottom: 20px;">目標</h3>
                 <div class="image-placeholder"
-                    style="height: 120px; display: flex; align-items: center; justify-content: center; font-size: 1.2em; font-weight: bold; margin-bottom: 40px; background-color: #f0f0f0; color: #333; border: 1px solid #ccc;">
+                    style="height: 120px; display: flex; align-items: center; justify-content: center; font-size: 1.2em; font-weight: bold; margin-bottom: 40px; background-color: #fff; color: #333; border: 1px solid #ccc;">
                     私立文系大学・短大・専門職大学・専門学校・就職
                 </div>
 
