--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
                         <h3>校長のプロフィールにするので、ここにプロフィールが入ります。</h3>
                         <hr style="margin: 15px 0; border: 0; border-top: 1px solid #ddd;">
                         <p style="font-size: 0.95em; line-height: 1.7; color: #444; margin-bottom: 20px;">
-                            テキストテキストテキスト
+                            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                         </p>
                     </div>
                 </div>
@@ -214,7 +214,7 @@
                         <li>JR常磐線「土浦駅」からバス</li>
                         <li>各方面からのスクールバスを運行（詳細要確認）</li>
                     </ul>
-                    <div style="margin-top: 20px; padding: 15px; background-color: #f5f5f5; border: 1px solid #ddd;">
+                    <div style="margin-top: 20px; padding: 15px; background-color: #fff; border: 1px solid #ddd;">
                         <strong>霞ヶ浦高等学校</strong><br>
                         〒300-0000 茨城県かすみがうら市○○町1-2-3<br>
                         TEL: 029-887-0013 / FAX: 029-887-XXXX
