--- a/career.html
+++ b/career.html
@@ -171,11 +171,11 @@
         <section class="course-section">
             <h2 id="kokugakuin" class="course-title" style="margin-top: 50px;">國學院大學連携協定</h2>
             <div class="content-block"
-                style="text-align: center; padding: 30px; background-color: #f9f9f9; border: 1px dashed #999;">
+                style="text-align: center; padding: 30px; background-color: #fff; border: 1px dashed #999;">
                 <p style="margin-bottom: 20px;">本校は國學院大學と連携協定を結んでおり、高大連携プログラムなどを実施しています。<br>詳細は以下の資料をダウンロードしてご確認ください。
                 </p>
                 <a href="#"
-                    style="display: inline-block; padding: 15px 30px; background-color: #e2e2e2; border: 1px solid #ccc; color: #333; text-decoration: none; font-weight: bold; border-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+                    style="display: inline-block; padding: 15px 30px; background-color: #e2e2e2; border: 1px solid #ccc; color: #333; text-decoration: none; font-weight: bold; border-radius: 4px; ">
                     <svg span style="vertical-align: middle; margin-right: 5px; width: 20px; height: 20px;" fill="none"
                         stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
