--- a/contact_alumni.html
+++ b/contact_alumni.html
@@ -101,7 +101,7 @@
         <section class="course-section">
             <h2 class="course-title">各種証明書等の申請・お問い合わせ</h2>
             <div class="content-block"
-                style="max-width: 800px; margin: 0 auto; background-color: #f9f9f9; padding: 40px; border-radius: 8px; border-top: 5px solid #333;">
+                style="max-width: 800px; margin: 0 auto; background-color: #fff; padding: 40px; border-radius: 8px; border-top: 5px solid #333;">
 
                 <p style="margin-bottom: 25px; line-height: 1.6;">卒業証明書、成績証明書、調査書等の発行申請や、同窓会窓口へのお問い合わせを受け付けています。<br>
                     証明書の発行には数日～1週間程度かかる場合がございますので、余裕を持ってお申し込みください。</p>
