--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         <!-- Hierarchical Navigation Section -->
         <section class="hierarchy-nav-section"
-            style="margin: 40px 0; padding: 30px; background-color: #f9f9f9; border-radius: 8px; border-top: 4px solid #333;">
+            style="margin: 40px 0; padding: 30px; background-color: #fff; border-radius: 8px; border-top: 4px solid #333;">
             <h2 style="font-size: 1.4em; margin-bottom: 25px; border-bottom: 1px solid #ddd; padding-bottom: 10px;">
                 サイトマップ（階層ナビゲーション）</h2>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px;">
