style: set all image placeholders to gray background with uniform placeholder text

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>学校紹介・施設案内</h1>
-            <div class="main-hero-placeholder"></div>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
@@ -102,7 +102,7 @@
         <!-- Learning Center Section -->
         <section id="learning-center" class="course-section">
             <h2 class="course-title" id="learning_center">学習センター</h2>
-            <div class="main-hero-placeholder"></div>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
 
             <div class="content-block center-text">
                 <h3>自宅でもない、塾でもない、あなたのための学習空間</h3>
@@ -111,21 +111,21 @@
                 <div class="learning-spaces">
                     <!-- Space 1 -->
                     <div class="space-item">
-                        <div class="image-placeholder">Innovation Lab (写真)</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                         <h4>Innovation Lab</h4>
                         <p>探究学習でも活用！<br>グループワーク用の「学び合い」空間</p>
                     </div>
 
                     <!-- Space 2 -->
                     <div class="space-item">
-                        <div class="image-placeholder">Study Room (写真)</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                         <h4>Study Room</h4>
                         <p>個人用の学習机を完備。<br>黙々と学習するための自習スペース。</p>
                     </div>
 
                     <!-- Space 3 -->
                     <div class="space-item">
-                        <div class="image-placeholder">生徒ラウンジ (写真)</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                         <h4>生徒ラウンジ</h4>
                         <p>学習したり、休憩したり、<br>生徒専用の“憩いの空間”</p>
                     </div>
@@ -139,12 +139,12 @@
                     <div class="column">
                         <h5>・20時まで開放</h5>
                         <p>原則、最終下校は17:00ですが、学習センターは20:00まで開放しています。部活動の後でも、納得いくまで学習に取り組むことができます。</p>
-                        <div class="image-placeholder">夜間学習の様子 (写真)</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                     <div class="column">
                         <h5>・教員が近くに常駐</h5>
                         <p>教員が近くに常駐しているため、質問したい時に職員室まで行く必要がありません。いつでも気軽に質問できる環境が整っています。</p>
-                        <div class="image-placeholder">教員への質問風景 (写真)</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
             <div class="content-block">
                 <div style="display: flex; gap: 30px; flex-wrap: wrap;">
                     <div style="flex: 1.5; min-width: 300px;">
-                        <div class="image-placeholder" style="height: 300px;">校長先生ポートレート</div>
+                        <div class="image-placeholder" style="height: 300px;">ここに写真を入れるイメージ</div>
                     </div>
                     <div style="flex: 1; min-width: 300px;">
                         <h3>校長のプロフィールにするので、ここにプロフィールが入ります。</h3>
@@ -182,7 +182,7 @@
                         </p>
                     </div>
                     <div class="column">
-                        <div class="image-placeholder">生徒が夢を語る様子</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                 </div>
 
@@ -190,7 +190,7 @@
 
                 <div class="two-column" style="margin-top: 30px;">
                     <div class="column">
-                        <div class="image-placeholder">探究学習の様子</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                     <div class="column">
                         <p>霞ヶ浦高等学校では探究学習を取り入れ、AIには不可能とされている「0から1を生み出す力」を養っています。たとえば、大手企業と共に研究開発を考える授業や阿見町の課題を見つけ出し解決策を提案する授業など、これからの時代に必要とされる非認知能力の向上を図り実現しています。
