--- a/career.html
+++ b/career.html
@@ -93,7 +93,7 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>進路指導</h1>
-            <div class="main-hero-placeholder"></div>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
@@ -112,7 +112,7 @@
                 <div class="grade-year-section">
                     <div class="two-column">
                         <div class="column">
-                            <div class="image-placeholder">1年次 進路指導の様子</div>
+                            <div class="image-placeholder">ここに写真を入れるイメージ</div>
                         </div>
                         <div class="column">
                             <h4>1年次</h4>
@@ -130,7 +130,7 @@
                 <div class="grade-year-section">
                     <div class="two-column">
                         <div class="column">
-                            <div class="image-placeholder">2年次 進路指導の様子</div>
+                            <div class="image-placeholder">ここに写真を入れるイメージ</div>
                         </div>
                         <div class="column">
                             <h4>2年次</h4>
@@ -148,7 +148,7 @@
                 <div class="grade-year-section">
                     <div class="two-column">
                         <div class="column">
-                            <div class="image-placeholder">3年次 進路指導の様子</div>
+                            <div class="image-placeholder">ここに写真を入れるイメージ</div>
                         </div>
                         <div class="column">
                             <h4>3年次</h4>
@@ -191,7 +191,7 @@
         <section class="course-section">
             <h2 class="course-title" id="results">最近５年間の合格大学（浪人含む）</h2>
             <div class="content-block center-text">
-                <div class="image-placeholder" style="height: 300px;">合格実績一覧 (表・ロゴなど)</div>
+                <div class="image-placeholder" style="height: 300px;">ここに写真を入れるイメージ</div>
                 <div style="margin-top: 20px;">
                     <a href="#"><button
                             style="padding: 15px 30px; font-size: 1.1em; cursor: pointer; background: #666; color: #fff; border: none; border-radius: 4px;">最新の実績を見る</button></a>
@@ -207,7 +207,7 @@
                 <!-- Person 1 -->
                 <div class="interview-card"
                     style="width: calc(50% - 10px); border: 1px solid #ddd; padding: 20px; box-sizing: border-box;">
-                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">卒業生A（特進コース）</div>
+                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">ここに写真を入れるイメージ</div>
                     <h3>茨城大学 合格</h3>
                     <p>明確な目標を立て、最後まで諦めずに努力しました。</p>
                     <a href="interview_detail.html"
@@ -216,7 +216,7 @@
                 <!-- Person 2 -->
                 <div class="interview-card"
                     style="width: calc(50% - 10px); border: 1px solid #ddd; padding: 20px; box-sizing: border-box;">
-                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">卒業生B（総合進学コース）</div>
+                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">ここに写真を入れるイメージ</div>
                     <h3>〇〇大学 合格</h3>
                     <p>部活と両立しながら第一志望に合格することができました。</p>
                     <a href="interview_detail.html"
