--- a/club.html
+++ b/club.html
@@ -93,7 +93,7 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>部活動</h1>
-            <div class="main-hero-placeholder"></div>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
@@ -142,7 +142,7 @@
                         <p>未経験者も多数在籍しています。まずはマット運動から始めて、それぞれのステップでレスリングの楽しさを知してもらえればと思います。</p>
                     </div>
                     <div class="column">
-                        <div class="image-placeholder">レスリング部 練習風景</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                 </div>
 
@@ -171,7 +171,7 @@
             <div class="content-block">
                 <div class="two-column">
                     <div class="column">
-                        <div class="image-placeholder">剣道部 稽古風景</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                     <div class="column">
                         <div class="achievement-box">
@@ -191,7 +191,7 @@
         <section class="course-section center-text">
             <h3>その他の部活動</h3>
             <p>本校には運動部・文化部合わせて多くの部活動があります。</p>
-                <div class="image-placeholder" style="height: 150px;">部活動一覧リスト</div>
+                <div class="image-placeholder" style="height: 150px;">ここに写真を入れるイメージ</div>
         </section>
 
     </main>
