--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>お問い合わせ</h1>
-            <div class="main-hero-placeholder"></div>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
@@ -108,7 +108,7 @@
                 <a href="contact_admission.html" class="audience-card-large"
                     style="text-decoration: none; display: flex; max-width: 800px; width: 100%; transition: transform 0.2s;">
                     <div class="card-image-wrapper" style="width: 30%;">
-                        <div class="image-placeholder" style="height: 100%;">受験生</div>
+                        <div class="image-placeholder" style="height: 100%;">ここに写真を入れるイメージ</div>
                     </div>
                     <div class="card-content-wrapper"
                         style="width: 70%; display: flex; flex-direction: column; justify-content: center;">
@@ -127,7 +127,7 @@
                 <a href="contact_parents.html" class="audience-card-large"
                     style="text-decoration: none; display: flex; max-width: 800px; width: 100%; transition: transform 0.2s;">
                     <div class="card-image-wrapper" style="width: 30%;">
-                        <div class="image-placeholder" style="height: 100%;">在校生・保護者</div>
+                        <div class="image-placeholder" style="height: 100%;">ここに写真を入れるイメージ</div>
                     </div>
                     <div class="card-content-wrapper"
                         style="width: 70%; display: flex; flex-direction: column; justify-content: center;">
@@ -146,7 +146,7 @@
                 <a href="contact_alumni.html" class="audience-card-large"
                     style="text-decoration: none; display: flex; max-width: 800px; width: 100%; transition: transform 0.2s;">
                     <div class="card-image-wrapper" style="width: 30%;">
-                        <div class="image-placeholder" style="height: 100%;">卒業生</div>
+                        <div class="image-placeholder" style="height: 100%;">ここに写真を入れるイメージ</div>
                     </div>
                     <div class="card-content-wrapper"
                         style="width: 70%; display: flex; flex-direction: column; justify-content: center;">
