--- a/course.html
+++ b/course.html
@@ -93,7 +93,7 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>コース紹介</h1>
-            <div class="main-hero-placeholder"></div>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
@@ -106,7 +106,7 @@
             <div class="content-block">
                 <div class="two-column">
                     <div class="column">
-                        <div class="image-placeholder" style="height: 100%; min-height: 200px;">実績イメージ写真</div>
+                        <div class="image-placeholder" style="height: 100%; min-height: 200px;">ここに写真を入れるイメージ</div>
                     </div>
                     <div class="column" style="display: flex; flex-direction: column; justify-content: center;">
                         <div class="achievement-box">
@@ -136,7 +136,7 @@
                         </ul>
                     </div>
                     <div class="column">
-                        <div class="image-placeholder">少人数クラス授業風景</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                 </div>
             </div>
@@ -157,12 +157,12 @@
                         <h5>・２０時まで開放</h5>
                         <p>原則、最終下校は17：00。でも、学習センターは、20：00まで学習で活⽤できる！！「部活が終わった後、30分だけでも学校で勉強したい！」特進選抜コースで文武両道を目指すこの見方となる施設です。
                         </p>
-                        <div class="image-placeholder">学習センターの様子 (写真)</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                     <div class="column">
                         <h5>・教員が近くに常駐、質問は教員待機室へ</h5>
                         <p>質問したい時、職員室まで⾏く必要がない！いつでも質問できる環境を整備。わからないをそのままにしない！聞きやすく、訪ねやすい教員待機室をぜひ体験してみてください。</p>
-                        <div class="image-placeholder">教員待機室 (写真)</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                 </div>
             </div>
@@ -177,7 +177,7 @@
             <div class="content-block">
                 <div class="two-column">
                     <div class="column">
-                        <div class="image-placeholder" style="height: 100%; min-height: 200px;">実績イメージ写真</div>
+                        <div class="image-placeholder" style="height: 100%; min-height: 200px;">ここに写真を入れるイメージ</div>
                     </div>
                     <div class="column" style="display: flex; flex-direction: column; justify-content: center;">
                         <div class="achievement-box">
@@ -205,7 +205,7 @@
                         </ul>
                     </div>
                     <div class="column">
-                        <div class="image-placeholder">ゼミナール活動の様子</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                 </div>
             </div>
@@ -225,13 +225,13 @@
                     <div class="column">
                         <h5>・ゼロからイチを生み出す力</h5>
                         <p>企業インターンや、阿見町と連携した地域探究を通して、ゼロからイチを生み出す力を養います。大人には考えつかない高校生ならではの発想で、「新しい」を作っていきましょう！</p>
-                        <div class="image-placeholder">探究学習の様子 (写真)</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                     <div class="column">
                         <h5>・大学受験に向けたキャリア探究</h5>
                         <p>受験対策の１つとして、志望理由書を作成します。この時間を「自分の生き方を見つける時間」と定義し、生徒と教員がともに本気で人生を探究しています。また、ウェルビーイングを扱い、例えば、「なぜあの人は評価されるのか-能力よりも大切なこと-」、「糖尿病になる理由とその未来」、「幸福とはなにか-様々なバイアスから考える-」など、テーマを絞って大学のゼミのような活動をしています。
                         </p>
-                        <div class="image-placeholder">キャリア探究の様子 (写真)</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                 </div>
             </div>
@@ -246,7 +246,7 @@
             <div class="content-block">
                 <div class="two-column">
                     <div class="column">
-                        <div class="image-placeholder" style="height: 100%; min-height: 200px;">実績イメージ写真</div>
+                        <div class="image-placeholder" style="height: 100%; min-height: 200px;">ここに写真を入れるイメージ</div>
                     </div>
                     <div class="column" style="display: flex; flex-direction: column; justify-content: center;">
                         <div class="achievement-box">
@@ -274,7 +274,7 @@
                         </ul>
                     </div>
                     <div class="column">
-                        <div class="image-placeholder">検定対策・補習の様子</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                 </div>
             </div>
@@ -295,12 +295,12 @@
                         <h5>・公務員講座、企業インターン</h5>
                         <p>高校卒業後、就職を目指せるのもこのコースの特徴です！特に人気の公務員は、1年次から特別講座を設けています。企業インターンも3年次に参加可能で、自分に合った就職先を見つけ出すことができます。
                         </p>
-                        <div class="image-placeholder">公務員講座の様子 (写真)</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                     <div class="column">
                         <h5>・看護体験実習、各種資格取得</h5>
                         <p>看護体験実習も充実しており、3年次には看護クラスが創設されます。また、大学受験に必要な英検や漢検、就職に役立つ秘書検定やビジネス文書実務検定など、各種検定取得に力を入れています！</p>
-                        <div class="image-placeholder">看護体験実習の様子 (写真)</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                 </div>
             </div>
