--- a/header_template.html
+++ b/header_template.html
@@ -81,6 +81,6 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>霞ヶ浦高等学校</h1>
-            <div class="main-hero-placeholder"></div>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
