--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>霞ヶ浦高等学校</h1>
-            <div class="main-hero-placeholder"></div>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
@@ -189,7 +189,7 @@
             <!-- For Prospective Students -->
             <div class="audience-card-large">
                 <div class="card-image-wrapper">
-                    <div class="image-placeholder" style="height: 300px;">受験生イメージ（オープンスクール・学校説明会の様子）</div>
+                    <div class="image-placeholder" style="height: 300px;">ここに写真を入れるイメージ</div>
                 </div>
                 <div class="card-content-wrapper">
                     <h3 class="audience-title-large"></h3>
@@ -238,7 +238,7 @@
             <!-- For Current Students/Parents -->
             <div class="audience-card-large">
                 <div class="card-image-wrapper">
-                    <div class="image-placeholder" style="height: 300px;">在校生・保護者イメージ（授業風景・保護者会の様子）</div>
+                    <div class="image-placeholder" style="height: 300px;">ここに写真を入れるイメージ</div>
                 </div>
                 <div class="card-content-wrapper">
                     <h3 class="audience-title-large"></h3>
@@ -280,7 +280,7 @@
                         <a href="hub_admission.html" class="audience-card-large"
                             style="text-decoration: none; color: inherit;">
                             <div class="card-image-wrapper">
-                                <div class="image-placeholder">受験生</div>
+                                <div class="image-placeholder">ここに写真を入れるイメージ</div>
                             </div>
                             <div class="card-content-wrapper">
                                 <h3 class="audience-title-large">受験生の方へ</h3>
@@ -300,7 +300,7 @@
                         <a href="hub_parents.html" class="audience-card-large"
                             style="text-decoration: none; color: inherit;">
                             <div class="card-image-wrapper">
-                                <div class="image-placeholder">在校生・保護者</div>
+                                <div class="image-placeholder">ここに写真を入れるイメージ</div>
                             </div>
                             <div class="card-content-wrapper">
                                 <h3 class="audience-title-large">在校生・保護者の方へ</h3>
@@ -321,7 +321,7 @@
                             <!-- For Alumni -->
                             <div class="audience-card-small">
                                 <div class="card-image-wrapper-small">
-                                    <div class="image-placeholder" style="height: 200px;">卒業生イメージ（卒業式・同窓会の様子）</div>
+                                    <div class="image-placeholder" style="height: 200px;">ここに写真を入れるイメージ</div>
                                 </div>
                                 <div class="card-content-wrapper-small">
                                     <h3 class="audience-title-small"></h3>
@@ -339,7 +339,7 @@
                             <!-- For Teacher Recruitment -->
                             <div class="audience-card-small">
                                 <div class="card-image-wrapper-small">
-                                    <div class="image-placeholder" style="height: 200px;">教員イメージ（授業・職員室の様子）</div>
+                                    <div class="image-placeholder" style="height: 200px;">ここに写真を入れるイメージ</div>
                                 </div>
                                 <div class="card-content-wrapper-small">
                                     <h3 class="audience-title-small"></h3>
