--- a/interview.html
+++ b/interview.html
@@ -93,7 +93,7 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>卒業生インタビュー</h1>
-            <div class="main-hero-placeholder"></div>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
@@ -105,7 +105,7 @@
                 <!-- Person 1 -->
                 <div class="interview-card"
                     style="width: calc(50% - 10px); border: 1px solid #ddd; padding: 20px; box-sizing: border-box;">
-                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">卒業生A（特進コース）</div>
+                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">ここに写真を入れるイメージ</div>
                     <h3>茨城大学 合格</h3>
                     <p>明確な目標を立て、最後まで諦めずに努力しました。</p>
                     <a href="interview_detail.html"
@@ -114,7 +114,7 @@
                 <!-- Person 2 -->
                 <div class="interview-card"
                     style="width: calc(50% - 10px); border: 1px solid #ddd; padding: 20px; box-sizing: border-box;">
-                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">卒業生B（総合進学コース）</div>
+                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">ここに写真を入れるイメージ</div>
                     <h3>〇〇大学 合格</h3>
                     <p>部活と両立しながら第一志望に合格することができました。</p>
                     <a href="interview_detail.html"
@@ -123,7 +123,7 @@
                 <!-- Person 3 -->
                 <div class="interview-card"
                     style="width: calc(50% - 10px); border: 1px solid #ddd; padding: 20px; box-sizing: border-box;">
-                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">卒業生C（総合進学コース）</div>
+                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">ここに写真を入れるイメージ</div>
                     <h3>地元優良企業へ就職</h3>
                     <p>資格取得や面接対策など、手厚いサポートに感謝しています。</p>
                     <a href="interview_detail.html"
@@ -132,7 +132,7 @@
                 <!-- Person 4 -->
                 <div class="interview-card"
                     style="width: calc(50% - 10px); border: 1px solid #ddd; padding: 20px; box-sizing: border-box;">
-                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">卒業生D（特進コース）</div>
+                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">ここに写真を入れるイメージ</div>
                     <h3>△△大学 合格</h3>
                     <p>先生方との距離が近く、気軽に相談できたのがよかったです。</p>
                     <a href="interview_detail.html"
