--- a/interview_detail.html
+++ b/interview_detail.html
@@ -93,7 +93,7 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>卒業生インタビュー</h1>
-            <div class="main-hero-placeholder"></div>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <div class="column">
-                            <div class="image-placeholder">インタビューの様子１</div>
+                            <div class="image-placeholder">ここに写真を入れるイメージ</div>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                 <div class="qa-block-with-image">
                     <div class="two-column">
                         <div class="column">
-                            <div class="image-placeholder">インタビューの様子２</div>
+                            <div class="image-placeholder">ここに写真を入れるイメージ</div>
                         </div>
                         <div class="column">
                             <div class="question-header">
@@ -166,7 +166,7 @@
                             </div>
                         </div>
                         <div class="column">
-                            <div class="image-placeholder">インタビューの様子３</div>
+                            <div class="image-placeholder">ここに写真を入れるイメージ</div>
                         </div>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
                 <div class="qa-block-with-image">
                     <div class="two-column">
                         <div class="column">
-                            <div class="image-placeholder">インタビューの様子４</div>
+                            <div class="image-placeholder">ここに写真を入れるイメージ</div>
                         </div>
                         <div class="column">
                             <div class="question-header">
