--- a/news.html
+++ b/news.html
@@ -93,7 +93,7 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>お知らせ</h1>
-            <div class="main-hero-placeholder"></div>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
