--- a/school_life.html
+++ b/school_life.html
@@ -93,7 +93,7 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>学校生活</h1>
-            <div class="main-hero-placeholder"></div>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
@@ -107,10 +107,10 @@
             <div class="content-block">
                 <div class="two-column">
                     <div class="column">
-                        <div class="image-placeholder">運動会 / 修学旅行 などの活動写真</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                     <div class="column">
-                        <div class="image-placeholder">帆掛祭 / 卒業式 などの活動写真</div>
+                        <div class="image-placeholder">ここに写真を入れるイメージ</div>
                     </div>
                 </div>
             </div>
