--- a/hub_alumni.html
+++ b/hub_alumni.html
@@ -144,7 +144,7 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>卒業生の方へ</h1>
-            <div class="main-hero-placeholder"></div>
+            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
