content: add facility.jpg to the main header in about.html

--- a/about.html
+++ b/about.html
@@ -93,7 +93,8 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>学校紹介・施設案内</h1>
-            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
+            <img src="img/facility.jpg" alt="学校紹介・施設案内"
+                style="width: 100%; height: auto; max-height: 400px; object-fit: cover; margin-top: 15px; background-color: #eee;">
         </div>
     </header>
 
